Cant type negative numbers on mobile temporary fix

--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ label {
 }
 
 input[type='text'],
-input[type='number'] {
+input[type='tel'] {
   border: 1px solid #dedede;
   border-radius: 2px;
   display: block;
